[#13] Fix app-chat-room-list width on mobile view

--- a/frontend/src/app/view/main/main.component.scss
+++ b/frontend/src/app/view/main/main.component.scss
@@ -9,6 +9,10 @@
 }
 
 @media only screen and (max-width: 800px) {
+  app-chat-room-list {
+    max-width: calc(100vw - 20px);
+  }
+
   .main-view-container {
     grid-template-columns: auto;
   }
